@@ -96,6 +96,7 @@ S3method(AIC, default)
 S3method(AIC, logLik)
 S3method(alias, formula)
 S3method(alias, lm)
+S3method(as.data.frame, aovproj)
 S3method(as.data.frame, ftable)
 S3method(as.data.frame, logLik)
 S3method(as.table, ftable)
