@@ -1,6 +1,6 @@
 
-R version 2.9.0 Under development (unstable) (2008-12-20 r47264)
-Copyright (C) 2008 The R Foundation for Statistical Computing
+R version 2.10.0 Under development (unstable) (2009-05-27 r48651)
+Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -628,4 +628,61 @@ climb   1 320.99
 [4,] "4+" "d"         
 [5,] "5 " "e"         
 > ## failed in 2.8.1
+> 
+> ## wish of PR#13505
+> utils::data(npk, package="MASS")
+> npk.aov <- aov(yield ~ block + N * P + K, npk)
+> foo <- proj(npk.aov)
+> cbind(npk, foo)
+   block N P K yield (Intercept)  block         N          P         K
+1      1 0 1 1  49.5      54.875 -0.850 -2.808333 -0.5916667 -1.991667
+2      1 1 1 0  62.8      54.875 -0.850  2.808333 -0.5916667  1.991667
+3      1 0 0 0  46.8      54.875 -0.850 -2.808333  0.5916667  1.991667
+4      1 1 0 1  57.0      54.875 -0.850  2.808333  0.5916667 -1.991667
+5      2 1 0 0  59.8      54.875  2.575  2.808333  0.5916667  1.991667
+6      2 1 1 1  58.5      54.875  2.575  2.808333 -0.5916667 -1.991667
+7      2 0 0 1  55.5      54.875  2.575 -2.808333  0.5916667 -1.991667
+8      2 0 1 0  56.0      54.875  2.575 -2.808333 -0.5916667  1.991667
+9      3 0 1 0  62.8      54.875  5.900 -2.808333 -0.5916667  1.991667
+10     3 1 1 1  55.8      54.875  5.900  2.808333 -0.5916667 -1.991667
+11     3 1 0 0  69.5      54.875  5.900  2.808333  0.5916667  1.991667
+12     3 0 0 1  55.0      54.875  5.900 -2.808333  0.5916667 -1.991667
+13     4 1 0 0  62.0      54.875 -4.750  2.808333  0.5916667  1.991667
+14     4 1 1 1  48.8      54.875 -4.750  2.808333 -0.5916667 -1.991667
+15     4 0 0 1  45.5      54.875 -4.750 -2.808333  0.5916667 -1.991667
+16     4 0 1 0  44.2      54.875 -4.750 -2.808333 -0.5916667  1.991667
+17     5 1 1 0  52.0      54.875 -4.350  2.808333 -0.5916667  1.991667
+18     5 0 0 0  51.5      54.875 -4.350 -2.808333  0.5916667  1.991667
+19     5 1 0 1  49.8      54.875 -4.350  2.808333  0.5916667 -1.991667
+20     5 0 1 1  48.8      54.875 -4.350 -2.808333 -0.5916667 -1.991667
+21     6 1 0 1  57.2      54.875  1.475  2.808333  0.5916667 -1.991667
+22     6 1 1 0  59.0      54.875  1.475  2.808333 -0.5916667  1.991667
+23     6 0 1 1  53.2      54.875  1.475 -2.808333 -0.5916667 -1.991667
+24     6 0 0 0  56.0      54.875  1.475 -2.808333  0.5916667  1.991667
+          N:P  Residuals
+1   0.9416667 -0.0750000
+2  -0.9416667  5.5083333
+3  -0.9416667 -6.0583333
+4   0.9416667  0.6250000
+5   0.9416667 -3.9833333
+6  -0.9416667  1.7666667
+7  -0.9416667  3.2000000
+8   0.9416667 -0.9833333
+9   0.9416667  2.4916667
+10 -0.9416667 -4.2583333
+11  0.9416667  2.3916667
+12 -0.9416667 -0.6250000
+13  0.9416667  5.5416667
+14 -0.9416667 -0.6083333
+15 -0.9416667  0.5250000
+16  0.9416667 -5.4583333
+17 -0.9416667 -1.7916667
+18 -0.9416667  2.1416667
+19  0.9416667 -3.0750000
+20  0.9416667  2.7250000
+21  0.9416667 -1.5000000
+22 -0.9416667 -0.6166667
+23  0.9416667  1.3000000
+24 -0.9416667  0.8166667
+> ## failed in R < 2.10.0
 > 
